# IsaacTeleop

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-uv/: action.yml
.github/workflows/: build-ubuntu.yml  build-windows.yml
docs/source/: index.rst
docs/source/_static/css/: custom.css
docs/source/device/: add_device.rst  index.rst
docs/source/getting_started/: build_from_source.rst  quick_start.rst
docs/source/overview/: ecosystem.rst
docs/source/references/: device.rst  retargeting.rst
examples/oxr/python/: test_hand_inactive_on_plugin_stop.py  test_oak_camera.py
examples/retargeting/python/: example_retargeters.py
examples/schemaio/: frame_metadata_printer.cpp
examples/teleop_ros2/: Dockerfile  README.md
examples/teleop_ros2/python/: teleop_ros2_publisher.py
examples/teleop_session_manager/python/: external_inputs_example.py  teleop_session_example.py
scripts/: download_cloudxr_runtime_sdk.sh  download_cloudxr_sdk.sh
src/core/cloudxr/python/: CMakeLists.txt  runtime.py  wss.py
src/core/deviceio/cpp/: controller_tracker.cpp  frame_metadata_tracker_oak.cpp  full_body_tracker_pico.cpp  generic_3axis_pedal_tracker.cpp  hand_tracker.cpp  head_tracker.cpp  schema_tracker.cpp
src/core/deviceio/cpp/inc/deviceio/: controller_tracker.hpp  frame_metadata_tracker_oak.hpp  generic_3axis_pedal_tracker.hpp  hand_tracker.hpp  head_tracker.hpp  schema_tracker.hpp  tracker.hpp
src/core/deviceio/python/: deviceio_bindings.cpp  deviceio_init.py
src/core/mcap/cpp/: mcap_recorder.cpp
src/core/mcap_tests/cpp/: test_mcap_recorder.cpp
src/core/retargeting_engine/python/deviceio_source_nodes/: controllers_source.py  full_body_source.py  hands_source.py  head_source.py  pedals_source.py
src/core/retargeting_engine/python/interface/: __init__.py  base_retargeter.py  output_combiner.py  retargeter_core_types.py  retargeter_subgraph.py  tensor_group.py  value_input.py
src/core/retargeting_engine/python/utilities/: controller_transform.py  hand_transform.py  head_transform.py
src/core/retargeting_engine_tests/python/: test_base_retargeter.py  test_retargeter_composition.py  test_retargeter_timing.py  test_sources.py  test_tensor_group.py
src/core/schema/fbs/: full_body.fbs
src/core/teleop_session_manager/python/: config.py  teleop_session.py
src/core/teleop_session_manager_tests/python/: test_teleop_session.py
src/plugins/controller_synthetic_hands/: README.md  synthetic_hands_plugin.cpp
src/plugins/controller_synthetic_hands/inc/controller_synthetic_hands/: synthetic_hands_plugin.hpp
src/plugins/manus/core/: manus_hand_tracking_plugin.cpp
src/plugins/manus/inc/core/: manus_hand_tracking_plugin.hpp
src/plugins/plugin_utils/: hand_injector.cpp
src/plugins/plugin_utils/inc/plugin_utils/: hand_injector.hpp
src/retargeters/: dex_hand_retargeter.py  foot_pedal_retargeter.py  gripper_retargeter.py  locomotion_retargeter.py  se3_retargeter.py  tensor_reorderer.py
src/retargeters/G1/: trihand_motion_controller.py
